Bug 69935 - USB redirection is breaking
Summary: USB redirection is breaking
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-29 19:06 UTC by prochazka.nicolas
Modified: 2013-09-30 08:28 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
[PATCH spice-gtk] spice-channel: Fix usbredir being broken since commit 159c6ebf (1.00 KB, patch)
2013-09-29 21:05 UTC, Hans de Goede
Details | Splinter Review

Description prochazka.nicolas 2013-09-29 19:06:47 UTC

    
Comment 1 prochazka.nicolas 2013-09-29 19:08:28 UTC
In my test environment , 
spice-gtk 0.20 can redirect usb device,
after uptate to spice-gtk 0.21, it does not work anymore

a git bisect shows me : 
159c6ebf2cf3034e3ffb85b9b5fc1a4cec27dc99 is the first bad commit
commit 159c6ebf2cf3034e3ffb85b9b5fc1a4cec27dc99
Author: Marc-André Lureau <marcandre.lureau@gmail.com>
Date:   Sun Sep 8 20:25:40 2013 +0200

    gtk: simplify spice_channel_recv_msg
    
    Use of coroutines allow to simplify spice_channel_recv_msg(), it doesn't
    need to keep current reading state, it can rely on the coroutine stack
    for that.

:040000 040000 1988f405226d8ea7d209a1c41190d668fb555861 6fe60a819fd59f231632c988233c2b015dbafcaa M      gtk

is the probleme.

Regards, 
Nicolas Prochazka
Comment 2 Marc-Andre Lureau 2013-09-29 19:42:09 UTC
I will investigate asap the issue, it's not surprising that 0.21 broke some functionnality given the nature of the changes.

(Hans, do you see anything obvious that would break USB in 159c6ebf2cf?)
Comment 3 Hans de Goede 2013-09-29 21:04:57 UTC
Hi,

(In reply to comment #2)
> Hans, do you see anything obvious that would break USB in 159c6ebf2cf?

Nothing obvious, but after an hour and a half of reading code + debugging I've a fix :) I've send it to the list and I'll attach it here too.

Can you add this to the Fedora packages and issue an update please?

Regards,

Hans
Comment 4 Hans de Goede 2013-09-29 21:05:40 UTC
Created attachment 86818 [details] [review]
[PATCH spice-gtk] spice-channel: Fix usbredir being broken since  commit 159c6ebf
Comment 5 prochazka.nicolas 2013-09-30 08:28:37 UTC
I confirm that the fix works.
Thanks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.