spice-channel: Fix usbredir being broken since commit 159c6ebf

The usbredir channel uses spice_msg_in_raw to get its data, which uses
in->dpos to determine the msg size and that was no longer being set for
non sub-messages.

https://bugs.freedesktop.org/show_bug.cgi?id=69935

Signed-off-by: Hans de Goede <hdegoede@redhat.com>